<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rajeev.tourguide.ChangePassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tg_header"
        android:layout_marginBottom="30dp"
        android:id="@+id/imageView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/current_password"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:layout_marginBottom="10dp"
        android:id="@+id/current_password_change_password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/new_password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/custom_edittext"
        android:layout_marginBottom="10dp"
        android:id="@+id/new_password_change_password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:layout_marginBottom="10dp"
        android:id="@+id/confirm_password_change_password" />

    <Button
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:textColor="@color/white"
        android:backgroundTint="@color/gray"
        android:backgroundTintMode="src_in"
        android:layout_marginBottom="10dp"
        android:id="@+id/change_password_change_password" />


</LinearLayout>
