<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rajeev.tourguide.SignInScreen">


    <TextView
        android:text="@string/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/skip_login" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Create New Login"
            android:id="@+id/create_new_login"
            android:shadowColor="@color/white"
            android:shadowRadius="3"
            android:backgroundTint="@color/gray"
            android:backgroundTintMode="src_in"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearlayout_in_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tg_header"
            android:id="@+id/tg_header_on_login_screen"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:id="@+id/username_on_login_screen" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:id="@+id/password_on_login_screen" />

        <Button
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/white"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"
            android:backgroundTintMode="src_in"
            android:layout_marginBottom="10dp"
            android:id="@+id/login" />

        <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:shadowColor="@color/white"
            android:shadowRadius="3"
            android:textColor="@color/black"
            android:id="@+id/forgot_password" />

    </LinearLayout>

</RelativeLayout>
